deployments/kubernetes/thymeleaf-example-no-helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-jdk11
  namespace: springboot
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: springboot-jdk11
