deployments/kubernetes/thymeleaf-example-no-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: springboot-jdk11
  namespace: springboot
spec:
  ingressClassName: avi-ingress-class-datacenter
  rules:
    - host: springboot-jdk11.ncpeh.nhn.no
      http:
        paths:
          - backend:
              service:
                name: springboot-jdk11
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - springboot-jdk11.ncpeh.nhn.no
      secretName: springboot-jdk11-tls-datacenter
